# hacspec

./: .gitignore  Cargo.nix  Cargo.old  flake.nix  search-index.js
.github/workflows/: generate_examples_fstar.yml
examples/p256/: Hacspec.P256.fst
fstar/: .dir-locals.el  Hacspec.Chacha20.NProof.fst  Hacspec.Chacha20.Proof.fst  Hacspec.Chacha20.fst  Hacspec.Lib.FoldiLemmas.fst  Hacspec.Lib.fst  Hacspec.Poly1305.Proof.fst  Hacspec.Poly1305.fst  IndexableContent.fst  PPP.fst  XXX.fst
language/: Cargo.toml
language/src/: asdasd.rs  ast_to_rustspec.rs  bin.rs  elab_monadic_lets.rs  hir_to_rustspec.rs  main.rs  name_resolution.rs  rustspec.rs  rustspec_to_coq.rs  rustspec_to_easycrypt.rs  rustspec_to_fstar.rs  typechecker.rs
language/test-crate/: Cargo.toml
language/test-crate/dependencies/testbar/: Cargo.toml
language/test-crate/dependencies/testbar/src/: lib.rs
language/test-crate/dependencies/testfoo/: Cargo.toml
language/test-crate/dependencies/testfoo/src/: lib.rs  testsubfoo_a.rs  testsubfoo_b.rs
language/test-crate/src/: lib.rs
lib/src/: transmute.rs
test/: Cargo.toml  Hacspec.Test.fst  notes.org
test/src/: test.rs
