[package]
name = "hacspec-test"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/test.rs"

[dependencies]
hacspec-lib = { path = "../lib" }
backtrace = "0.3"

[dev-dependencies]
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
hacspec-dev = { path = "../utils/dev" }
criterion = "0.3"
rand = "0.8"

[[bench]]
name = "benchmarks"
harness = false
